syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
option csharp_namespace = "CleanArchitecture.Services.Catalog.API.Grpc.V1";

package Product.V1;

service Product {
	rpc GetProducts (google.protobuf.Empty) returns (ProductsResponse){ 
	option (google.api.http) = {
      get: "/v1/products"
    };
	}
	rpc GetProductById (GetProductByIdRequest) returns (ProductResponse){
	option (google.api.http) = {
      get: "/v1/products/{productId}"
    };
	}
}

message ProductsResponse{
	repeated  ProductResponse products = 1;
}

message ProductResponse {
	string id = 1;
	string name = 2;
	string description = 3;
	double price = 4;
}
message GetProductByIdRequest{
	string productId = 1;
}