syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "Protos/customTypes.proto";
option csharp_namespace = "CleanArchitecture.Services.Basket.API.Grpc.V1";

package Basket.V1;

service Basket {
  rpc GetBasketItems (google.protobuf.Empty) returns (BasketsResponse){
	  option (google.api.http) = {
      get: "/v1/baskets"
    };
  }
  rpc AddProductToBasket(BasketRequest) returns (google.protobuf.BoolValue){
  option (google.api.http) = {
      post: "/v1/baskets/product"
      body: "*"
    };
  }
  rpc GetBasketItemsCount(google.protobuf.Empty) returns (google.protobuf.Int32Value){
    option (google.api.http) = {
      get: "/v1/baskets/count"
    };}
  rpc DeleteBasketItemByProductId (BasketRequest) returns (google.protobuf.BoolValue){
    option (google.api.http) = {
      delete: "/v1/baskets/product/{productId}"
    };
  }
  rpc ClearBasket (google.protobuf.Empty) returns (google.protobuf.BoolValue){
    option (google.api.http) = {
      delete: "/v1/baskets"
    };
  }
  rpc UpdateQuantityByProductId(UpdateQuantityRequest) returns (google.protobuf.BoolValue){
     option (google.api.http) = {
      patch: "/v1/baskets/product:quantity"
      body: "*"
    };
  }
}

message BasketRequest {
	string productId = 1;
}

message BasketsResponse{
   repeated  BasketItemResponse basketItems = 1;
}

message BasketItemResponse {
  string productId =1;
  string name = 2;
  string description = 3;
  int32 quantity = 4;
  customTypes.DecimalValue price = 5;
}
message UpdateQuantityRequest {
	string productId = 1;
	int32 quantity = 2;
}
